src/main/java/com/example/library_application/validation/exeptions/RightsException.java
package com.example.library_application.validation.exeptions;

public class RightsException extends RuntimeException{
    public RightsException(String message) {
        super(message);
    }
}
